HeadlineTopicProgramDto への変換に他の属性を追加
